Partial automatic functionality. Still working on chatroomText.jsp. Change the IP address in chatroom jsp to YOUR ip if you want to test it

--- a/war/WEB-INF/web.xml
+++ b/war/WEB-INF/web.xml
@@ -24,6 +24,8 @@
   </servlet>
   
 
+  
+
 
   <!-- Servlet mappings -->
   <servlet-mapping>
@@ -41,6 +43,10 @@
   <servlet-mapping>
     <servlet-name>CreateChatroomServlet</servlet-name>
     <url-pattern>/createChatroom</url-pattern>
+  </servlet-mapping>
+    <servlet-mapping>
+    <servlet-name>ChatroomServlet</servlet-name>
+    <url-pattern>/chatroomText</url-pattern>
   </servlet-mapping>
   
 
